--- a/src/Analyzer.Core.NuGet/Analyzer.Core.nuspec
+++ b/src/Analyzer.Core.NuGet/Analyzer.Core.nuspec
@@ -19,10 +19,10 @@
         <dependency id="Newtonsoft.Json" version="13.0.3" />
         <dependency id="Microsoft.Extensions.Logging.Abstractions" version="6.0.1" />
         <dependency id="Microsoft.PowerShell.SDK" version="7.4.1" />
-        <dependency id="Microsoft.PSRule.Rules.Azure" version="1.26.0-B0011" />
-        <dependency id="Microsoft.PSRule.SDK" version="2.8" />
-        <dependency id="Sarif.Sdk" version="2.4.12" />
-        <dependency id="System.IO.Abstractions" version="19.1.5" />
+        <dependency id="Microsoft.PSRule.Rules.Azure" version="1.33.2" />
+        <dependency id="Microsoft.PSRule.SDK" version="2.9.0" />
+        <dependency id="Sarif.Sdk" version="2.4.16" />
+        <dependency id="System.IO.Abstractions" version="20.0.4" />
       </group>
     </dependencies>
 
